<?xml version="1.0" encoding="UTF-8"?>
<!-- 
	Copyright 2021 Jeremy KUHN
	
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
	   http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.winterframework</groupId>
		<artifactId>winter-examples-root</artifactId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>
	
	<groupId>io.winterframework.example</groupId>
	<artifactId>winter-example-web</artifactId>
	<packaging>jar</packaging>

	<name>io.winterframework.example.web</name>
	<description>Winter web example</description>

	<properties>
		<version.winter.modules>1.0.0-SNAPSHOT</version.winter.modules>
		<maven.compiler.source>15</maven.compiler.source>
		<maven.compiler.target>15</maven.compiler.target>
	</properties>
	
	<dependencies>
		<dependency>
			<groupId>io.winterframework</groupId>
			<artifactId>winter-core</artifactId>
		</dependency>
		<dependency>
			<groupId>io.winterframework.mod</groupId>
			<artifactId>winter-boot</artifactId>
		</dependency>
		<dependency>
			<groupId>io.winterframework.mod</groupId>
			<artifactId>winter-configuration</artifactId>
		</dependency>
		<dependency>
			<groupId>io.winterframework.mod</groupId>
			<artifactId>winter-web</artifactId>
		</dependency>
		
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-transport-native-epoll</artifactId>
			<classifier>linux-x86_64</classifier>
		</dependency>
		
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>swagger-ui</artifactId>
			<version>3.43.0</version>
		</dependency>
	</dependencies>
	
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>3.0.0</version>
					<configuration>
						<mainClass>io.winterframework.example.web.App</mainClass>
						<commandlineArgs>-Dio.netty.leakDetectionLevel=paranoid -Dio.netty.leakDetection.targetRecords=20</commandlineArgs>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>io.winterframework.example.web.App</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.winterframework.tool</groupId>
				<artifactId>winter-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>winter-package</id>
						<phase>package</phase>
						<goals>
							<goal>build-app</goal>
						</goals>
						<configuration>
							<vm>server</vm>
							<!-- jdk.crypto.ec: TLS, jdk.jdwp.agent: remote debug -->
							<addModules>jdk.crypto.ec,jdk.jdwp.agent</addModules>
							<vmOptions>-Xms2G -Xmx2G -XX:+UseNUMA -XX:+UseParallelGC --add-modules io.netty.transport.unix.common,io.netty.transport.epoll,org.webjars.swagger.ui</vmOptions>
							<formats>
								<format>zip</format>
								<format>deb</format>
							</formats>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>native</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.nativeimage</groupId>
						<artifactId>native-image-maven-plugin</artifactId>
						<version>20.1.0</version>
						<configuration>
							<buildArgs>--no-server --no-fallback --enable-all-security-services --allow-incomplete-classpath -H:+TraceClassInitialization -H:+ReportExceptionStackTraces</buildArgs>
							<imageName>${project.artifactId}</imageName>
						</configuration>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>native-image</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
